--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   fl_chart: ^0.66.0
 
   # Date & Time
-  intl: ^0.18.1
+  intl: ^0.20.2
 
   # Utilities
   uuid: ^4.3.3
@@ -75,6 +75,7 @@ dependencies:
 
   # URL Launcher
   url_launcher: ^6.2.4
+  connectivity_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
