--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
   lottie: ^3.0.0
+  google_fonts: ^6.2.1
 
   # Forms & Validation
   email_validator: ^3.0.0
@@ -91,9 +92,4 @@ flutter:
     - assets/images/
     - assets/icons/
 
-  # fonts:
-  #   - family: Roboto
-  #     fonts:
-  #       - asset: assets/fonts/Roboto-Regular.ttf
-  #       - asset: assets/fonts/Roboto-Bold.ttf
-  #         weight: 700
+  # Using Google Fonts package for Poppins font family
